[package]
name    = "control-code"
version = "0.5.3"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Control code parser and formatter."
repository  = "https://github.com/meh/rust-control-code"
keywords    = ["ecma48", "iso6429", "control"]

[dependencies]
nom      = "2.0"
smallvec = "0.2"
