[package]
name    = "control-code"
version = "0.7.1"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Control code parser and formatter."
repository  = "https://github.com/meh/rust-control-code"
keywords    = ["ecma48", "iso6429", "control", "dec", "sixel"]

[dependencies]
nom      = "3.0"
smallvec = "0.4"
